test/sema/ambiguous-init-call-with-overloaded-params.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    init(a: int) { }
    init(b: int) { }
}

func main() {
    // CHECK: 10:9: error: ambiguous reference to 'Foo.init'
    _ = Foo(1)
}
